<resources>
    <string name="app_name">JDES_PCCS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="On">開啟</string>
    <string name="Off">關閉</string>
    <string name="logo">Logo</string>
    <string name="button">Button</string>
    <string name="DVD">DVD</string>
    <string name="Mute">靜音</string>
    <string name="VoiceBtn">音頻控制</string>
    <string name="MachineBtn">設備控制</string>
    <string name="RelayBtn">繼電器控制</string>
    <string name="MediaBtn">影像切換</string>
    <string name="Screen">布幕</string>
    <string name="DVDOutput">DVD輸出</string>
    <string name="Projector">投影機</string>
    <string name="PowerBtn">電源控制</string>
    <string name="PowerSup">電源%1$d</string>
    <string name="AllCall">全開</string>
    <string name="AllCallOff">全關</string>
    <string name="UpIcon">▲</string>
    <string name="DownIcon">▼</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>