<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MachineFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    style="@style/InputTextView"
                    android:text="@string/Projector" />

                <Button
                    android:id="@+id/buttonOn"
                    style="@style/ContextButton"
                    android:textSize="24sp"
                    android:text="@string/On"
                    tools:ignore="DuplicateSpeakableTextCheck,TextSizeCheck" />

                <Button
                    android:id="@+id/buttonOff"
                    style="@style/ContextButton"
                    android:textSize="24sp"
                    android:text="@string/Off"
                    tools:ignore="DuplicateSpeakableTextCheck,TextSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/InputTextView"
                    android:text="@string/Screen" />

                <Button
                    android:id="@+id/buttonUp"
                    style="@style/ContextButton"
                    android:textSize="36sp"
                    android:text="@string/UpIcon"
                    tools:ignore="DuplicateSpeakableTextCheck,TextSizeCheck" />

                <Button
                    android:id="@+id/buttonDown"
                    style="@style/ContextButton"
                    android:textSize="36sp"
                    android:text="@string/DownIcon"
                    tools:ignore="DuplicateSpeakableTextCheck,TextSizeCheck" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>