<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_backgroud"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/titleLogo"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo_white"
            android:contentDescription="@string/logo" />

        <Button
            android:id="@+id/allCallOpen"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_width="180dp"
            android:layout_height="70dp"
            style="@style/AllCallButton" />

        <Button
            android:id="@+id/allCallClose"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:text="@string/AllCallOff"
            style="@style/AllCallButton" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragmentLiner"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:layout_width="match_parent"
            android:layout_height="450dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/progressLiner"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@color/progressBG"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/progressbar_style" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btnVoice"
                style="@style/TitleButton"
                android:text="@string/VoiceBtn"
                android:drawableTop="@drawable/voice60w"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btnMachine"
                style="@style/TitleButton"
                android:text="@string/MachineBtn"
                android:drawableTop="@drawable/machine60w"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btnMedia"
                style="@style/TitleButton"
                android:text="@string/MediaBtn"
                android:drawableTop="@drawable/switch60w"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btnRelay"
                style="@style/TitleButton"
                android:text="@string/RelayBtn"
                android:drawableTop="@drawable/relay60w"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btnPower"
                style="@style/TitleButton"
                android:text="@string/PowerBtn"
                android:drawableTop="@drawable/power60w"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>